✨ Adição de novas rotas no swagger
