# controller/route_lab.go
@@ -8,6 +8,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// CreateLab godoc
+// @Summary Create a new lab
+// @Description Create a new lab
+// @Tags labs
+// @Accept  json
+// @Produce  json
+// @Param lab body req.CreateLabRequest true "Lab object that needs to be created"
+// @Success 201 {object} res.CreateLabResponse
+// @Failure 400 {object} rest_err.RestErr
+// @Router /api/v1/labs/create [post]
 func CreateLab(c *gin.Context) {
 	var labReq req.CreateLabRequest
 
@@ -24,15 +34,25 @@ func CreateLab(c *gin.Context) {
 		return
 	}
 
-	lab, err = models.Save(lab)
+	lab, err = models.SaveLab(lab)
 	if err != nil {
-		c.JSON(500, gin.H{"error": "error saving lab"})
+		c.JSON(500, gin.H{"error": err.Error()})
 		return
 	}
 
 	c.JSON(201, MapLabToResponse(lab))
 }
 
+// GetLab godoc
+// @Summary Retrieve a lab by ID
+// @Description Fetches a lab by its unique identifier
+// @Tags labs
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Lab ID"
+// @Success 200 {object} res.CreateLabResponse
+// @Failure 404 {object} rest_err.RestErr
+// @Router /api/v1/labs/{id} [get]
 func GetLab(c *gin.Context) {
 	lab, err := models.FindLab(c.Param("id"))
 	if err != nil {
@@ -43,6 +63,15 @@ func GetLab(c *gin.Context) {
 	c.JSON(200, MapLabToResponse(lab))
 }
 
+// GetLabs godoc
+// @Summary Retrieve all labs
+// @Description Fetches a list of all labs
+// @Tags labs
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} res.CreateLabResponse
+// @Failure 500 {object} rest_err.RestErr
+// @Router /api/v1/labs [get]
 func GetLabs(c *gin.Context) {
 	labs, err := models.FindAllLabs()
 	if err != nil {
@@ -58,11 +87,24 @@ func GetLabs(c *gin.Context) {
 	c.JSON(200, labsResponse)
 }
 
+// UpdateLab godoc
+// @Summary Update an existing lab
+// @Description Updates the details of a specific lab by ID
+// @Tags labs
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Lab ID"
+// @Param lab body req.CreateLabRequest true "Lab object with updated details"
+// @Success 200 {object} res.CreateLabResponse
+// @Failure 400 {object} rest_err.RestErr
+// @Failure 404 {object} rest_err.RestErr
+// @Failure 500 {object} rest_err.RestErr
+// @Router /api/v1/labs/{id} [put]
 func UpdateLab(c *gin.Context) {
 	var labReq req.CreateLabRequest
 
 	if err := c.ShouldBindJSON(&labReq); err != nil {
-		c.JSON(400, gin.H{"error": "invalid json body"})
+		c.JSON(400, gin.H{"error": err.Error()})
 		return
 	}
 
@@ -89,6 +131,16 @@ func UpdateLab(c *gin.Context) {
 	c.JSON(200, MapLabToResponse(lab))
 }
 
+// DeleteLab godoc
+// @Summary Delete a lab
+// @Description Deletes a specific lab by ID
+// @Tags labs
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Lab ID"
+// @Success 204 {object} nil
+// @Failure 500 {object} rest_err.RestErr
+// @Router /api/v1/labs/{id} [delete]
 func DeleteLab(c *gin.Context) {
 	err := models.DeleteLab(c.Param("id"))
 	if err != nil {
@@ -101,7 +153,7 @@ func DeleteLab(c *gin.Context) {
 
 func MapLabToResponse(lab models.Lab) interface{} {
 	return gin.H{
-		"id":        lab.ID.Hex(),
+		"id":        lab.ID,
 		"name":      lab.Name,
 		"local":     lab.Local,
 		"acessible": lab.Acessible,
